--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -345,8 +345,8 @@
     <small>
       <a
         class="open-documento"
-        href="{% url 'adiciona_documento_proj' projeto.id %}"
-        data-url="{% url 'adiciona_documento_proj' projeto.id %}"
+        href="{% url 'adiciona_documento' projeto.organizacao.id projeto.id %}"
+        data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id %}"
         >&#10133;</a
       >
     </small>
