--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -20,9 +20,10 @@
         <li><a href="{% url 'mentorias_alocadas' %}">Mentorias Alocadas</a></li>
     </ul>
 
-    <h5>Relatos Quinzenais</h5>
+    <h5>Atividades do Orientador</h5>
     <ul>
-        <li><a href="{% url 'relatos_quinzenais' %}">Verificar Relatos Quinzenais</a></li>
+        <li><a href="{% url 'relatos_quinzenais' %}">Relatos Quinzenais</a></li>
+        <li><a href="{% url 'planos_de_orientacao' %}">Planos de Orientação</a></li>
     </ul>
 
     <h5>Avaliações</h5>
