permite coordenador subir planos de orientação

--- a/professores/templates/professores/planos_de_orientacao.html
+++ b/professores/templates/professores/planos_de_orientacao.html
@@ -28,7 +28,12 @@
           <a {% if projeto.ano != configuracao.ano %}style="color:lightgray"
              {% else %}style="color:green"
              {% endif %}
-          data-toggle="tooltip" data-html="true" animation="true" title="Entregue">&#128463;</a>
+           data-toggle="tooltip" data-html="true" animation="true" title="Entregue"
+           class="open-documento"
+           href="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 documento.id %}"
+           data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 documento.id %}">
+            <b>&#128463;</b>
+          </a>
 
           {% comment %} (28, 'Plano de Orientação'), {% endcomment %}
           <a {% if projeto.ano != configuracao.ano %}style="color:lightgray"{% endif %} 
@@ -43,8 +48,11 @@
           <a {% if projeto.ano != configuracao.ano %}style="color:lightgray"
              {% else %}style="color:red"
              {% endif %}
-          data-toggle="tooltip" data-html="true" animation="true" title="Não entregue">&#128460;</a>
-
+           data-toggle="tooltip" data-html="true" animation="true" title="Não entregue"
+           class="open-documento"
+           href="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 %}"
+           data-url="{% url 'adiciona_documento' projeto.organizacao.id projeto.id 28 %}"><b>&#128460;</b>
+          </a>
           {% comment %} (28, 'Plano de Orientação'), {% endcomment %}
           <a {% if projeto.ano != configuracao.ano %}style="color:lightgray"{% endif %} 
            class="open-documento"
