--- a/users/templates/users/professor_detail.html
+++ b/users/templates/users/professor_detail.html
@@ -19,6 +19,12 @@
   
   <span class="titulo">{{professor.user.get_full_name}}</span>
 
+  {% if not professor.user.is_active %}
+    <p style="color: red;">
+        - NÃO ATIVO -
+    </p><br>
+  {% endif %}
+
   <strong>Usuário:</strong> {{ professor.user.username }}<br>
   <strong>Regime de Dedicação:</strong>
   {% if professor.dedicacao %}
